# an_easy_demo

./: .env  Cargo.toml  README.md  api-tests.http
migrations/: 20251111125835_demo.sql
src/: api.rs  db.rs  main.rs  model.rs  repo.rs
